# hermes-agent-cluster

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.hermes  LICENSE  README.md  SPEC.md  WORKFLOW.md  __init__.py  __main__.py  cluster.yaml  docker-compose.hermes.yml  docker-compose.yml  go.mod  go.sum  install.sh  plugin.yaml  pyproject.toml  setup_wizard.py  test-e2e.sh
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
cmd/cluster/: main.go
configs/: main.yaml  worker.yaml
hermes_cluster/: __init__.py  __main__.py  app.py  serve.py  task_manager.py
hermes_cluster/core/: __init__.py  node_manager.py  recovery.py  watchdog.py
hermes_cluster/hooks/: __init__.py  dispatcher.py  manager.py  payload.py
hermes_cluster/lease/: __init__.py  lease_manager.py
hermes_cluster/models/: __init__.py
hermes_cluster/recovery/: __init__.py  detector.py  manager.py  rescheduler.py  revoker.py
hermes_cluster/routers/: __init__.py  cluster.py  config.py  federation.py  hooks.py  leases.py  nodes.py  recovery.py  schedule.py  setup.py  status.py  sync.py  tasks.py  visualization.py  workflow.py
hermes_cluster/state/: __init__.py  cluster_store.py
hermes_cluster/static/: index.html
hermes_cluster/sync/: __init__.py  router.py
internal/api/: api.go
internal/capability/: matcher.go  (+1 more)
tests/: test_api.py  test_cluster_store_dropin.py  test_concurrency_conditions.py  test_integration.py
tests_v3/: __init__.py  test_missing_apis.py  test_setup_api.py  test_setup_wizard.py
(+72 files in other folders)
